viz: Add shared main thread context provider code.

In VizProcessTransportFactory we already have a context provider that is
shared on the main thread. It's used for all ui::Compositors already.
Implement VizProcessTransportFactory::SharedMainThreadContextProvider()
to return that context provider.

Bug: 776050
Change-Id: Ie113fab9d2b49042f173138e4f9f143b191ae848
Reviewed-on: https://chromium-review.googlesource.com/827687
Commit-Queue: kylechar <kylechar@chromium.org>
Reviewed-by: danakj <danakj@chromium.org>
Cr-Commit-Position: refs/heads/master@{#526721}
Former-commit-id: dc8a048f8c1d5398ac84c6583192466f8877764b